applications/hashicorp-vault/hashicorp-vault-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hashicorp-vault
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
