applications/hashicorp-vault/vault-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: hashicorp-vault
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  to:
    kind: Service
    name: vault
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
